--- a/src/snippets/sections/sidebar/_sidebar.scss
+++ b/src/snippets/sections/sidebar/_sidebar.scss
@@ -123,6 +123,7 @@
     padding:           0;
     width:             20px;
     height:            20px;
+    outline:           none !important;
     border:            none;
     background-color:  transparent;
     background-image:  url("../images/sprite/ico__search.png");
