--- a/src/snippets/globals/_grid.scss
+++ b/src/snippets/globals/_grid.scss
@@ -1,5 +1,6 @@
 // Grid
 .page-wrapper {
+  position:     relative;
   clear:        both;
   overflow:     hidden;
   margin-right: auto;
@@ -7,22 +8,13 @@
   min-width:    $minw;
   min-height:   100%;
   max-width:    $maxw-alpha;
+  height:       auto;
+  background:   #e1e1e1;
   &:before {
     @extend %pseudoBeforeAfter;
     bottom:     0;
-    z-index:    -1;
-    min-height: 100%;
+    z-index:    0;
     width:      240px;
     background: #222;
-  }
-  &:after {
-    @extend %pseudoBeforeAfter;
-    top:        0;
-    right:      0;
-    bottom:     0;
-    left:       240px;
-    z-index:    -1;
-    min-height: 100%;
-    background: #e1e1e1;
   }
 }
