--- a/src/snippets/sections/main/_main.scss
+++ b/src/snippets/sections/main/_main.scss
@@ -2,7 +2,6 @@
   $main
 \*------------------------------------*/
 .main {
-  position:   relative;
-  overflow:   hidden;
-  background: #e1e1e1;
+  margin-bottom: -150px;
+  background:    #e1e1e1;
 }
