--- a/src/snippets/globals/_variables.scss
+++ b/src/snippets/globals/_variables.scss
@@ -14,8 +14,8 @@ $base__selection-bg: #b3d4fc;
 $base__selection-text-shadow: none;
 
 // Links (lvhfa)
-$link__color: #4a9aea;
-$link__color--hover: #06e;
+$link__color: #009cc3;
+$link__color--hover: #4a9aea;
 
 // Grid
 $minw: 1280px !default;
