--- a/src/snippets/sections/footer/_footer.jade
+++ b/src/snippets/sections/footer/_footer.jade
@@ -1,3 +1,25 @@
 // BEGIN $footer
-footer.footer.cf(init-block='_temp.scss') Footer
+footer.footer.cf(init-block='_temp.scss')
+  ul.footer__links
+    li.footer__links-item: a.footer__links-link(href=link) Реклама на сайте
+    li.footer__links-item: a.footer__links-link(href=link) Правила сайта
+    li.footer__links-item: a.footer__links-link(href=link) Соглашения
+    li.footer__links-item: a.footer__links-link(href=link) Контакты
+  ul.footer__links
+    li.footer__links-item: a.footer__links-link(href=link) Проекты
+    li.footer__links-item: a.footer__links-link(href=link) Каталог пользователей
+    li.footer__links-item: a.footer__links-link(href=link) Магазин
+    li.footer__links-item: a.footer__links-link(href=link) Блоги
+  .footer__info
+    | Зарегистрировано:
+    b.footer__info-b 1432545
+    br
+    | Сейчас на сайте:
+    b.footer__info-b 4545
+    br
+    | Проектов:
+    b.footer__info-b 432545
+    br
+    | Выполненных проектов:
+    b.footer__info-b 4535
 // END $footer
