--- a/src/snippets/sections/main/_main.jade
+++ b/src/snippets/sections/main/_main.jade
@@ -1,3 +1,4 @@
 // BEGIN $main
-main.main(init-block='_temp.scss') main
+main.main(init-block='_temp.scss')
+  include ../../components/header/_header
 // END $main
