--- a/src/snippets/sections/main/_main.jade
+++ b/src/snippets/sections/main/_main.jade
@@ -1,4 +1,5 @@
 // BEGIN $main
 main.main(init-block='_temp.scss')
   include ../../components/header/_header
+  include ../../components/carousel/_carousel
 // END $main
