--- a/src/snippets/style.scss
+++ b/src/snippets/style.scss
@@ -9,6 +9,7 @@
 // Sections and Components (BEM > Blocks)
 @import "sections/main/main";
 /**/@import "components/header/header";
+/**/@import "components/carousel/carousel";
 /**/@import "sections/sidebar/sidebar";
 /**//**/@import "components/nav/nav";
 @import "sections/footer/footer";
