--- a/src/snippets/style.scss
+++ b/src/snippets/style.scss
@@ -10,6 +10,7 @@
 @import "sections/main/main";
 /**/@import "components/header/header";
 /**/@import "components/carousel/carousel";
+/**/@import "components/promo/promo";
 /**/@import "sections/sidebar/sidebar";
 /**//**/@import "components/nav/nav";
 @import "sections/footer/footer";
