--- a/src/snippets/pages/_head.jade
+++ b/src/snippets/pages/_head.jade
@@ -25,4 +25,6 @@ head
   //-link(rel='stylesheet', href='styles/normalize.css')
   link(rel='stylesheet', href='styles/bootstrap.css')
   link(rel='stylesheet', href='styles/style.css')
+  if pagename == 'index'
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic')
   link(rel='stylesheet', href='styles/fonts.css')
