--- a/src/snippets/sections/main/_main.jade
+++ b/src/snippets/sections/main/_main.jade
@@ -2,4 +2,5 @@
 main.main(init-block='_temp.scss')
   include ../../components/header/_header
   include ../../components/carousel/_carousel
+  include ../../components/promo/_promo
 // END $main
