--- a/src/snippets/components/nav/_nav.jade
+++ b/src/snippets/components/nav/_nav.jade
@@ -4,11 +4,11 @@
   ul.nav__list
     li.nav__item
       a.nav__link(href=link)
-       i.ico.ico--humanities
+       i.nav__ico.nav__ico--humanities
        | Гуманитарные науки
       li.nav__item.opened
         a.nav__link(href=link)
-          i.ico.ico--natural
+          i.nav__ico.nav__ico--natural
           | Естественные науки
         ul.nav__list-2
           li.nav__item-2
@@ -53,18 +53,18 @@
               span.nav__counter 11
       li.nav__item
         a.nav__link(href=link)
-          i.ico.ico--technic
+          i.nav__ico.nav__ico--technic
           | Технические науки
       li.nav__item
         a.nav__link(href=link)
-          i.ico.ico--social
+          i.nav__ico.nav__ico--social
           | Общественные науки
       li.nav__item
         a.nav__link(href=link)
-          i.ico.ico--applied
+          i.nav__ico.nav__ico--applied
           | Прикладные науки
       li.nav__item
         a.nav__link(href=link)
-          i.ico.ico--other
+          i.nav__ico.nav__ico--other
           | Прочее
 // END $nav
