--- a/src/snippets/components/promo/_promo.jade
+++ b/src/snippets/components/promo/_promo.jade
@@ -1,50 +1,20 @@
 // BEGIN $promo
 .promo.cf
   .promo__item
-    p.promo__text Опубликуйте
-      br
-      | заказ
+    p.promo__text Опубликуйте заказ
   .promo__item
-    p.promo__text Выберете интересный
-      br
-      | заказ и сделайте
-      br
-      | ставку
+    p.promo__text Выберете интересный заказ и сделайте ставку
   .promo__item
-    p.promo__text Выберете студлансера среди
-      br
-      | откликнувшихся, либо
-      br
-      | пригласите из каталога
+    p.promo__text Выберете студлансера среди откликнувшихся, либо пригласите из каталога
   .promo__item
-    p.promo__text Заказчик резервирует
-      br
-      | стоимость работы на
-      br
-      | сайте StudLance.ru
+    p.promo__text Заказчик резервирует стоимость работы на сайте StudLance.ru
   .promo__decor
   .promo__item
-    p.promo__text Контролируйте
-      br
-      | выполнение работы в
-      br
-      | специально отведенной
-      br
-      | рабочей области
+    p.promo__text Контролируйте выполнение работы в специально отведенной рабочей области
   .promo__item
-    p.promo__text Используйте рабочую область
-      br
-      | для связи с заказчиком и
-      br
-      | загрузки выполненной работы
+    p.promo__text Используйте рабочую область для связи с заказчиком и загрузки выполненной работы
   .promo__item
-    p.promo__text Проверьте и примите работу
-      br
-      | студлансера
+    p.promo__text Проверьте и примите работу студлансера
   .promo__item
-    p.promo__text Деньги поступят к вам
-      br
-      | на счет и будут доступны
-      br
-      | к выводу
+    p.promo__text Деньги поступят к вам на счет и будут доступны к выводу
 // END $promo
