--- a/src/snippets/fonts.scss
+++ b/src/snippets/fonts.scss
@@ -1,8 +1,10 @@
 // fixme: datauri?autogen?gulp/grunt?
 @import "globals/variables";
-// BEGIN HelveticaNeueCur Bold
-@import "fonts/helveticaneuecyr/healveticaneuecyrbold/healveticaneuecyrbold";
-// END HelveticaNeueCur Bold
-// BEGIN HelveticaNeueCur Regular
-@import "fonts/helveticaneuecyr/helveticaneuacyrregular/helveticaneuacyrregular";
-// END HelveticaNeueCur Regular
+
+// BEGIN HelveticaNeue Bold
+@import "fonts/helveticaneue/helveticaneuebold/helveticaneuebold";
+// END HelveticaNeue Bold
+
+// BEGIN HelveticaNeue Regular
+@import "fonts/helveticaneue/helveticaneueregular/helveticaneueregular";
+// END HelveticaNeue Regular
