--- a/src/snippets/globals/_helpers.scss
+++ b/src/snippets/globals/_helpers.scss
@@ -1,13 +1,13 @@
 %font--alpha {
   font-weight: 700;
   font-style:  normal;
-  font-family: "HelveticaNeueCyr Bold", $fallback__font;
+  font-family: "HelveticaNeue Bold", $fallback__font;
 }
 
 %font--beta {
   font-weight: 400;
   font-style:  normal;
-  font-family: "HelveticaNeueCyr Regular", $fallback__font;
+  font-family: "HelveticaNeue Regular", $fallback__font;
 }
 
 %font--gamma {
