--- a/src/snippets/sections/sidebar/_sidebar.scss
+++ b/src/snippets/sections/sidebar/_sidebar.scss
@@ -18,6 +18,7 @@
     border-bottom: 1px solid #2e2e2e;
   }
   .btn {
+    @extend %font--alpha;
     margin:    20px 0;
     width:     200px;
     height:    40px;
