--- a/src/snippets/style.scss
+++ b/src/snippets/style.scss
@@ -2,6 +2,7 @@
 // http://sass-lang.com/install
 // Globals
 @import "globals/variables";
+@import "fonts";
 @import "globals/mixins/map";
 @import "globals/global";
 @import "globals/helpers";
