--- a/src/snippets/components/header/_header.jade
+++ b/src/snippets/components/header/_header.jade
@@ -1,5 +1,5 @@
 // BEGIN $header
-.header.cf(init-block='_temp.scss')
+.header.cf
   a.header__btn(href=link)
     i.ico.ico__notice
     span.header__btn-text События
