--- a/src/snippets/globals/_global.scss
+++ b/src/snippets/globals/_global.scss
@@ -45,7 +45,7 @@ body {
 a {
   color:      $link__color;
   transition: color .15s linear;
-  @extend %tduhn;
+  @extend %tdnhu;
   // vhfa
   &:visited {
   }
