--- a/src/snippets/sections/footer/_footer.jade
+++ b/src/snippets/sections/footer/_footer.jade
@@ -1,5 +1,5 @@
 // BEGIN $footer
-footer.footer.cf(init-block='_temp.scss')
+footer.footer.cf
   ul.footer__links
     li.footer__links-item: a.footer__links-link(href=link) Реклама на сайте
     li.footer__links-item: a.footer__links-link(href=link) Правила сайта
