--- a/src/snippets/sections/footer/_footer.scss
+++ b/src/snippets/sections/footer/_footer.scss
@@ -19,6 +19,9 @@ $ct: 760;
     float:        left;
     padding-left: 40px;
     width:        perc(200, $ct);
+    &-link {
+      @extend %tduhn;
+    }
     @include bp(screen-beta) {
       width: perc(150, $ct);
     }
