--- a/src/snippets/sections/main/_main.jade
+++ b/src/snippets/sections/main/_main.jade
@@ -1,6 +1,9 @@
 // BEGIN $main
-main.main(init-block='_temp.scss')
+main.main
   include ../../components/header/_header
   include ../../components/carousel/_carousel
   include ../../components/promo/_promo
+  include ../../components/filter/_filter
+  include ../../components/proj-l/_proj-l
+  include ../../components/pagination/_pagination
 // END $main
