--- a/src/snippets/style.scss
+++ b/src/snippets/style.scss
@@ -12,6 +12,9 @@
 /**/@import "components/header/header";
 /**/@import "components/carousel/carousel";
 /**/@import "components/promo/promo";
+/**/@import "components/filter/filter";
+/**/@import "components/proj-l/proj-l";
+/**/@import "components/pagination/pagination";
 /**/@import "sections/sidebar/sidebar";
 /**//**/@import "components/nav/nav";
 @import "sections/footer/footer";
